Setting up the environment2.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,10 @@
 
 
 
-    <FrameLayout
+    <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/Allscreenscontainer"/>
+        android:id="@+id/allscreenscontainer"/>
 
 
 </android.support.design.widget.CoordinatorLayout>
