Setting up the environment5.

--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -6,7 +6,7 @@
     >
 
 
-    <com.example.omika.realityscanner.AutoFitTextureView
+    <TextureView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/textureview"/>
