--- a/app/src/main/res/layout/fragment_processing_screen.xml
+++ b/app/src/main/res/layout/fragment_processing_screen.xml
@@ -37,7 +37,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="5dp"
 
@@ -45,64 +45,48 @@
 
 
         android:id="@+id/attributesLayout">
-        <android.support.v7.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            app:cardCornerRadius="9dp"
-            android:layout_weight="1"
-            android:layout_marginStart="8dp"
 
-            android:layout_gravity="center"
-            android:id="@+id/card1"
-           >
-
-            <TextView
+            <Spinner
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="spinner1" />
+                android:id="@+id/textFormat"
+                android:layout_gravity="center_vertical"
+                android:popupBackground="@android:color/transparent"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:background="@null"/>
 
 
-        </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            app:cardCornerRadius="9dp"
-            android:layout_marginStart="8dp"
-            android:layout_weight="1"
-            android:layout_gravity="center"
-            android:id="@+id/card2"
-           >
 
-            <TextView
+
+
+
+            <Spinner
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="spinner2" />
+                android:id="@+id/saveFormat"
+                android:layout_gravity="center_vertical"
+                android:popupBackground="@android:color/transparent"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:background="@null"/>
 
 
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            app:cardCornerRadius="9dp"
-            android:id="@+id/card3"
-            android:layout_weight="1"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_gravity="center"
-            >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="spinner3" />
 
 
-        </android.support.v7.widget.CardView>
+
+         <Spinner
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:id="@+id/translateOptions"
+             android:layout_gravity="center_vertical"
+             android:popupBackground="@android:color/transparent"
+             android:layout_margin="8dp"
+             android:layout_weight="1"
+             android:background="@null"/>
+
+
 
     </LinearLayout>
 
