--- a/app/src/main/res/layout/fragment_collection_screen.xml
+++ b/app/src/main/res/layout/fragment_collection_screen.xml
@@ -1,14 +1,19 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    tools:context="com.example.omika.realityscanner.CollectionScreen"
     android:layout_height="match_parent"
-    tools:context="com.example.omika.realityscanner.CollectionScreen">
+    android:background="#f2f2f2">
 
-
-    <TextView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Collection screen"
-        />
+        android:id="@+id/recyclerView"
+        android:orientation="vertical">
 
-</FrameLayout>
+    </android.support.v7.widget.RecyclerView>
+
+</android.support.constraint.ConstraintLayout>
